Lab10/backend-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: lab10-backend-deployment
  labels:
    app: lab10-backend
    type: backend

spec:
  template:
    metadata:
      name: lab10-backend-pod
      labels:
        app: lab10-backend
        type: backend
    spec:
      containers:
        - name: lab10-backend-container
          image: juuzeff/lab10-backend
  replicas: 3
  selector:
    matchLabels:
      app: lab10-backend
      type: backend
