Lab10/backend-clusterip.yml
apiVersion: v1

kind: Service

metadata:
  name: lab10-backend-clusterip

spec:
  type: ClusterIP
  ports:
    - targetPort: 5000 # port docelowy aplikacji w node
      port: 5000
  selector: # wybieramy deployment zgodny z yml [nazwy!]
    app: lab10-backend
    type: backend
